2013-02-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32Context.m(-isCompatibleBitmap): Add
	missing varible.

2013-02-01  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSGState.h
	* Headers/gsc/GSGStateOps.h
	* Headers/gsc/GSStreamGState.h
	* Source/art/ARTGState.m
	* Source/art/composite.m
	* Source/art/ftfont-old.m
	* Source/art/ftfont.h
	* Source/art/ftfont.m
	* Source/art/path.m
	* Source/cairo/CairoGState.m
	* Source/gsc/GSContext.m
	* Source/gsc/GSGState.m
	* Source/gsc/GSStreamContext.m
	* Source/winlib/WIN32GState.m
	* Source/xlib/XGGState.m: Adopt to CGFloat changes in DPS/PS
	functions of gui.

2013-02-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m
	* Source/gsc/GSGState.m
	* Source/gsc/GSStreamContext.m
	* Source/winlib/WIN32GState.m: Adopt to CGFloat changes on NSBezierPath.

2013-01-27  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m
	* Source/cairo/CairoContext.m
	* Source/art/ARTContext.m
	* Source/xlib/XGContext.m
	* Source/winlib/WIN32Context.m: Move the bitmap conversion
	code from cairo to the gsc class. Add a new method to detect
	incompatible image formats and implement that for all backends.
	* Source/winlib/WIN32GState.m (GSCreateBitmap): Improve the
	handling of device black/white colour space.

2013-01-11  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/win32/w32_general.m (-decodeWM_CLOSEParams:::): Post the
	close event instead of sending it directly to the window.
	Patch by Doug Simons <doug.simons@testplant.com>

2013-01-05 00:54-EST Gregory John Casamento <greg.casamento@gmail.com>
	Merging changes made by Marcian Lytwyn

	* Tools/win32pbs.m: (+ownerByOsPb:) compare against name
	instead of pasteboard object to prevent condition where
	paste works only once as observed on Windows.
	(MainWindowProc) Add code to handle WM_RENDERALLFORMATS as documented
	on MSDN here: http://msdn.microsoft.com/en-us/library/windows/desktop/ms649029(v=vs.85).aspx

2012-12-31  Fred Kiefer  <FredKiefer@gmx.de>
